Fix: main photo ariet.JPG, preview image ariet2.JPG, update OG tags

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <title>Сайт-приглашение</title>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://samat999.github.io/wedding-temirlan-meerim/">
-  <meta property="og:title" content="Сайт-приглашение на свадьбу Темирлан и Мээрим">
+  <meta property="og:url" content="https://samat999.github.io/wedding-ariet-begai/">
+  <meta property="og:title" content="Сайт-приглашение на свадьбу Ариет и Багайым">
   <meta property="og:description" content="Дорогие гости! Приглашаем вас на нашу свадьбу. Все детали по ссылке.">
-  <meta property="og:image" content="https://samat999.github.io/wedding-temirlan-meerim/timm2.JPG">
+  <meta property="og:image" content="https://samat999.github.io/wedding-ariet-begai/ariet2.JPG">
   <meta property="og:image:width" content="800">
   <meta property="og:image:height" content="800">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://samat999.github.io/wedding-temirlan-meerim/">
-  <meta name="twitter:title" content="Сайт-приглашение на свадьбу Темирлан и Мээрим">
+  <meta name="twitter:url" content="https://samat999.github.io/wedding-ariet-begai/">
+  <meta name="twitter:title" content="Сайт-приглашение на свадьбу Ариет и Багайым">
   <meta name="twitter:description" content="Дорогие гости! Приглашаем вас на нашу свадьбу. Все детали по ссылке.">
-  <meta name="twitter:image" content="https://samat999.github.io/wedding-temirlan-meerim/timm2.JPG">
+  <meta name="twitter:image" content="https://samat999.github.io/wedding-ariet-begai/ariet2.JPG">
   <!-- Подключение всех нужных шрифтов с поддержкой кириллицы -->
   <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -712,7 +712,7 @@
   <div class="main-wrapper">
     <!-- Главное фото hero -->
     <div class="main-photo-area reveal-on-scroll">
-      <img class="main-photo reveal-on-scroll" src="ariet2.JPG" alt="Главное фото" loading="eager">
+      <img class="main-photo reveal-on-scroll" src="ariet.JPG" alt="Главное фото" loading="eager">
       <div class="main-names reveal-on-scroll" style="color:#fff !important; text-shadow:0 4px 18px #444, 0 1px 0 #888;">
         Ариет<br>& Багайым
       </div>
