--- a/index-kg.html
+++ b/index-kg.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ариет & Багайым – Үйлөнүү тоюна чакыруу</title>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://samat999.github.io/wedding-ariet-begai/index-kg.html">
+  <meta property="og:title" content="Сайт-приглашение на свадьбу Ариет и Багайым">
+  <meta property="og:description" content="Дорогие гости! Приглашаем вас на нашу свадьбу. Все детали по ссылке.">
+  <meta property="og:image" content="https://samat999.github.io/wedding-ariet-begai/ariet2.JPG">
+  <meta property="og:image:width" content="800">
+  <meta property="og:image:height" content="800">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://samat999.github.io/wedding-ariet-begai/index-kg.html">
+  <meta name="twitter:title" content="Сайт-приглашение на свадьбу Ариет и Багайым">
+  <meta name="twitter:description" content="Дорогие гости! Приглашаем вас на нашу свадьбу. Все детали по ссылке.">
+  <meta name="twitter:image" content="https://samat999.github.io/wedding-ariet-begai/ariet2.JPG">
   <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -459,7 +473,7 @@
 
   <div class="main-wrapper">
     <div class="main-photo-area reveal-on-scroll">
-      <img class="main-photo reveal-on-scroll" src="ariet2.JPG" alt="Негизги сүрөт" loading="eager">
+      <img class="main-photo reveal-on-scroll" src="ariet.JPG" alt="Негизги сүрөт" loading="eager">
       <div class="main-names reveal-on-scroll">
         Ариет<br>& Багайым
       </div>
