Update quiz option 3 text

--- a/index-kg.html
+++ b/index-kg.html
@@ -570,7 +570,7 @@
         </label>
         <label style="display:block; margin-bottom:4px;">
           <input type="radio" name="howMeet" value="3">
-          Биз «Жоолутук» программасынан (Бегай талапкер болчу) 😂
+          «Биз жоолуктук»программасында Бегай талапкер болчу
         </label>
         <label style="display:block; margin-bottom:6px;">
           <input type="radio" name="howMeet" value="4">
