--- a/index.html
+++ b/index.html
@@ -868,9 +868,9 @@
             <input type="radio" name="howMeet" value="3">
             <span
               data-i18n="quizOpt3"
-              data-ru="На программе «Жоолуктук» 😂"
-              data-kg="Биз «Жоолутук» программасынан (Бегай талапкер болсчу) 😂"
-            >На программе «Жоолуктук» 😂</span>
+              data-ru="Программа «Биз жоолуктук» Бегай была претендентом😂"
+              data-kg="«Биз жоолуктук»программасында Бегай талапкер болчу"
+            >Программа «Биз жоолуктук» Бегай была претендентом😂</span>
           </label>
           <label style="display:block; margin-bottom:6px;">
             <input type="radio" name="howMeet" value="4">
